mash: Fix crash launching V1 app in a tab

ShelfWindowWatcher should not remove shelf items it doesn't manage.
(ensure the item is managed before removing it on ShelfID changes)

Bug: 764960
Test: Opening "Chrome Web Store" in a tab from the shelf doesn't crash.
Change-Id: I80b44a179efa585760367b4bbd468b6d2d9aa856
Reviewed-on: https://chromium-review.googlesource.com/671633
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502672}
Former-commit-id: 944f93c09c2412f9d5ea0b2b1b8b6c66035a9017